Updated tests, added configuration model, added query parameters for timetable
